# winit_tray

./: Cargo.toml  justfile  mise.toml
examples/: Cargo.toml  basic.rs
examples/basic/: Cargo.toml
examples/src/: lib.rs
scripts/: setup-cross.rs
src/: context_menu.rs  lib.rs  manager.rs  menu_bar.rs  tray.rs
winit_extras_core/: Cargo.toml
winit_extras_core/src/: context_menu.rs  lib.rs  menu.rs  tray_icon_id.rs
winit_extras_linux/: Cargo.toml
winit_extras_linux/src/: dbus_interface.rs  lib.rs  menu.rs
winit_extras_macos/: Cargo.toml
winit_extras_macos/src/: context_menu.rs  lib.rs  menu.rs  menu_bar.rs  util.rs
winit_extras_vello/: Cargo.toml
winit_extras_vello/src/: lib.rs  menu.rs  style.rs
winit_extras_windows/: Cargo.toml
winit_extras_windows/src/: context_menu.rs  lib.rs  menu.rs  menu_bar.rs  msg.rs  tray.rs  util.rs
winit_tray_core/: Cargo.toml
winit_tray_core/src/: context_menu.rs  lib.rs  menu_bar.rs  popup.rs  tray_id.rs
winit_tray_linux/: Cargo.toml
winit_tray_linux/src/: dbus_interface.rs  lib.rs  menu.rs  util.rs
winit_tray_macos/: Cargo.toml
winit_tray_macos/src/: context_menu.rs  lib.rs  menu.rs  menu_bar.rs  util.rs
winit_tray_windows/: Cargo.toml
winit_tray_windows/src/: context_menu.rs  lib.rs  menu.rs  menu_bar.rs  msg.rs  popup.rs  util.rs
