[package]
name = "winit_extras"
version = "0.1.0"
edition = "2024"

[features]
default = ["menu", "context_menu"]
menu = [
    "winit_extras_windows/menu",
    "winit_extras_macos/menu",
    "winit_extras_linux/menu",
    "winit_extras_core/menu",
]
context_menu = [
    "menu",
    "winit_extras_windows/context_menu",
    "winit_extras_macos/context_menu",
    "winit_extras_core/context_menu",
]
menu_bar = [
    "menu",
    "winit_extras_windows/menu_bar",
    "winit_extras_macos/menu_bar",
    "winit_extras_core/menu_bar",
]
vello_renderer = ["context_menu", "dep:winit_extras_vello"]

[dependencies]
winit.workspace = true
winit_extras_core.workspace = true
anyhow.workspace = true
tracing.workspace = true
winit_extras_vello = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winit_extras_windows = { workspace = true, default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
winit_extras_macos = { workspace = true, default-features = false }


[target.'cfg(target_os = "linux")'.dependencies]
winit_extras_linux = { workspace = true, default-features = false }


# Workspace Configuration

[workspace]
resolver = "3"
members = [
    "winit_extras_core",
    "winit_extras_windows",
    "winit_extras_macos",
    "winit_extras_linux",
    "winit_extras_vello",
    "examples",
]

[workspace.dependencies]
# Internal crates
winit_extras = { path = ".", features = [] }
winit_extras_core = { path = "winit_extras_core" }
winit_extras_windows = { path = "winit_extras_windows", default-features = false }
winit_extras_macos = { path = "winit_extras_macos", default-features = false }
winit_extras_linux = { path = "winit_extras_linux", default-features = false }
winit_extras_vello = { path = "winit_extras_vello" }

# Winit ecosystem (pinned to beta)
winit = "=0.31.0-beta.2"
winit-core = "=0.31.0-beta.2"
dpi = "0.1.2"
rwh_06 = { package = "raw-window-handle", version = "0.6", features = ["std"] }

# Error handling and logging
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Image processing
image = "0.25"
png = "0.17"

# Rendering (for examples)
vello_cpu = "0.0.7"
vello_common = "0.0.7"
softbuffer = "0.4"

# Windows platform
windows-sys = "0.59.0"

# macOS platform (objc2 ecosystem)
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSArray",
    "NSData",
    "NSTimer",
    "NSNotification",
    "block2",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSMenu",
    "NSMenuItem",
    "NSImage",
    "NSImageRep",
    "NSBitmapImageRep",
    "NSButton",
    "NSEvent",
    "NSApplication",
    "NSView",
    "NSResponder",
    "NSTrackingArea",
    "NSControl",
    "NSCell",
    "NSWindow",
    "NSPanel",
    "NSScreen",
] }
objc2-core-foundation = "0.3"

# Linux platform
zbus = { version = "5.0", features = ["blocking-api"] }
