[package]
name = "examples"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["menu", "popup"]
menu = ["winit_tray/menu"]
popup = ["winit_tray/popup"]

[dependencies]
winit_tray.workspace = true
winit.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
image.workspace = true
softbuffer.workspace = true
vello_cpu.workspace = true
vello_common.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
winit_tray_windows.workspace = true
