[package]
name = "examples"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["menu", "context_menu", "menu_bar"]
menu = ["winit_extras/menu"]
context_menu = ["winit_extras/context_menu"]
menu_bar = ["winit_extras/menu_bar", "winit_extras_core/menu_bar"]

[dependencies]
winit_extras.workspace = true
winit_extras_core.workspace = true
winit.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
image.workspace = true
softbuffer.workspace = true
vello_cpu.workspace = true
vello_common.workspace = true
winit_extras_vello.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
winit_extras_windows.workspace = true
