[package]
name = "winit_extras_linux"
version = "0.1.0"
edition = "2024"

[features]
default = []
menu = ["winit_extras_core/menu"]

[dependencies]
winit_extras_core.workspace = true
winit-core.workspace = true
dpi.workspace = true
rwh_06.workspace = true
tracing.workspace = true
anyhow.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.0", features = ["blocking-api"] }
