[package]
name = "winit_extras_macos"
version = "0.1.0"
edition = "2021"

[features]
default = ["menu", "context_menu"]
menu = ["winit_extras_core/menu"]
context_menu = ["menu", "winit_extras_core/context_menu"]
menu_bar = ["menu", "winit_extras_core/menu_bar"]

[dependencies]
winit_extras_core.workspace = true
winit-core.workspace = true
dpi.workspace = true
rwh_06.workspace = true
tracing.workspace = true
anyhow.workspace = true
png.workspace = true

# macOS platform dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
block2.workspace = true
objc2-foundation.workspace = true
objc2-app-kit.workspace = true
objc2-core-foundation.workspace = true
