[package]
name = "winit_extras_windows"
version = "0.1.0"
edition = "2024"

[features]
default = ["menu", "context_menu"]
menu = ["winit_extras_core/menu"]
context_menu = ["menu", "winit_extras_core/context_menu"]
menu_bar = ["menu", "winit_extras_core/menu_bar"]

[dependencies]
winit_extras_core.workspace = true
winit-core.workspace = true
rwh_06.workspace = true
tracing.workspace = true
anyhow.workspace = true
dpi.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true
