[package]
name = "winit_tray_windows"
version = "0.1.0"
edition = "2024"

[features]
default = []
menu = ["winit_tray_core/menu"]

[dependencies]
winit-core.workspace = true
windows-sys.workspace = true
winit_tray_core.workspace = true
anyhow.workspace = true
dpi.workspace = true
rwh_06.workspace = true
tracing.workspace = true
