[package]
name = "winit_tray_windows"
version = "0.1.0"
edition = "2024"

[features]
default = ["menu", "context_menu"]
menu = ["winit_tray_core/menu"]
context_menu = ["menu", "winit_tray_core/context_menu"]

[dependencies]
winit_tray_core.workspace = true
winit-core.workspace = true
rwh_06.workspace = true
tracing.workspace = true
anyhow.workspace = true
dpi.workspace = true

# Windows platform dependencies
windows-sys.workspace = true
